--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ VUE_APP_CLIENT_SECRET=wsd1TiegyQLlAo5Cnd3ak4yUi7ZLGSk6
 
 VUE_APP_AUTH_URI=https://us.battle.net/oauth/authorize
 VUE_APP_TOKEN_URI=https://us.battle.net/oauth/token
+
+curl -u 8c18396075d84c2fbfa29467dbb61f3e:wsd1TiegyQLlAo5Cnd3ak4yUi7ZLGSk6 -d grant_type=client_credentials https://us.battle.net/oauth/token
