using axios for api calls

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 VUE_APP_CLIENT_ID=8c18396075d84c2fbfa29467dbb61f3e
-VUE_APP_CLIENT_SECRET=wsd1TiegyQLlAo5Cnd3ak4yUi7ZLGSk6
+VUE_APP_CLIENT_SECRET=L3yIEam5Zjdfxw3JBkJ0Dc1sg3y98pDM
 
 VUE_APP_AUTH_URI=https://us.battle.net/oauth/authorize
 VUE_APP_TOKEN_URI=https://us.battle.net/oauth/token
+
+VUE_APP_GET_TOON=https://us.api.blizzard.com/profile/wow/character/greymane/kretyn/appearance?namespace=profile-us&locale=en_US&access_token=US5E7tqZwOlOaGmS2vFHNVqIqGVrRUpJ4f
+VUE_APP_GET_TOON_IMAGES=https://us.api.blizzard.com/profile/wow/character/greymane/kretyn/character-media?namespace=profile-us&locale=en_US&access_token=US5E7tqZwOlOaGmS2vFHNVqIqGVrRUpJ4f
 
 curl -u 8c18396075d84c2fbfa29467dbb61f3e:wsd1TiegyQLlAo5Cnd3ak4yUi7ZLGSk6 -d grant_type=client_credentials https://us.battle.net/oauth/token
