--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^2.6.5",
+    "simple-oauth2": "^3.3.0",
+    "throng": "^4.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
